# Electrics_2

./: pyproject.toml
src/: item.py  items.csv  keyboard.py  mixin.py  phone.py
tests/: keyboard_test.py  test_item.py  test_phone.py
