[tool.poetry]
name = "electrics-2"
version = "0.1.0"
description = ""
authors = ["Sloonoff <Enclaf@mail.ru>"]
readme = "README.md"
packages = [{include = "electrics_2"}]

[tool.poetry.dependencies]
python = "^3.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

